--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -27,5 +27,5 @@ jobs:
 
       with: 
         app-name: technicality # Replace with your app name
-        publish-profile: $ # Define secret variable in repository settings as per action documentation
+        publish-profile: $ publish_profile
         package: './dotnetcorewebapp' 
